Fix small white gap between site logo image and menu bar

--- a/labbook/style.css
+++ b/labbook/style.css
@@ -1647,7 +1647,7 @@ object {
 
 /* Make sure logo link wraps around logo image. */
 .custom-logo-link {
-    display: inline-block;
+    display: flex;
 }
 
 /*--------------------------------------------------------------
